k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postbot
  labels:
    name: postbot
    environment: production
